2011-08-16  Sancho Lerena <slerena@artica.es>

	* extensions/vnc_view.php,
	images/vnc.png: New version of VNC extension, to operate with remote plugin
	instead local one. Add a lot of docs about this extension and remote management
	with Pandora. Removed old stuff on SSH extension due problems reported.

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, operation/agentes/stat_win.php: fixeds to
	show always units, and now show only avg by default, and now run the
	showing baseline again.
	
	Fixes: #3390113

2011-08-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.oracle.sql
	include/functions_agents.php
	include/functions_networkmap.php: Removed several mistakes in Pandora
	console over Oracle. 

2011-08-16  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_servers.php: Renamed enterprise ICMP and SNMP
	  servers in the server view.

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/db/db_sanity.php: fixes the notice php messages and warnings php
	messages. And fixed the uninitialised modules erasing.
	
	Fixes: #3392431

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_monitores.php: erased the notice php messages
	when $module["extended_info"] is empty.

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php, godmode/menu.php,
	godmode/snmpconsole/snmp_trap_generator.php: moved the form to generate
	traps into godmode in the submenu "Manage SNMP console".
	
	Fixes: #3390513

2011-08-16 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* pandoradb_data.sql: Changed days_compact field of tconfig to 90.
	This value set to disable db compact feature by default because is
	greater than days_purge (60 days).

2011-08-16  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the warning in
	the apache logs, and show the percentile bar correctly in the visual console
	editor.
	